MODINREACH-550: upgrade to spring-boot v4.0.5
- Migrate to Spring HTTP Service clients (@FeignClient → @HttpExchange)
- Add custom Rest Client Builder for Inn-Reach external clients (for calls to central server)
- Add status handler Folio Rest Client Builder for Inventory clients
- Replace @Retryable with RestTemplate where listeners attributes used (in Spring 7 listener attribute is removed)
- Configure StringHttpMessageConverter with application/json support before JacksonJsonHttpMessageConverter for @HttpExchange clients returning String
- Set hibernate.timezone.default_storage=NORMALIZE for OffsetDateTime with TIMESTAMP columns (Hibernate 7 default changed to NATIVE)
- Use cb.treat() for JPA Criteria API subclass attribute access (Hibernate 7 stricter JOINED inheritance)
- Replace ResultMatcher.matchAll() with lambda composition (removed in Spring Framework 7)
- Fix SourceRecordDTODeserializer to pass SourceRecordDTO.class instead of null to StdDeserializer (Jackson 3.x rejects null)
- Migrate TestUtil.deserializeFromJsonFile from Jackson 2.x to Jackson 3.x ObjectMapper (tools.jackson)
- Fix WireMock stub parameter ordering in CentralServerConfigurationControllerTest
- Add @AutoConfigureTestRestTemplate for TestRestTemplate bean injection (decoupled from @SpringBootTest in Boot 4)
- Add unit tests for RetryableUpdateService, InnReachErrorHandler, InventoryErrorHandler and CqlQuery
- Change Kafka serializer/deserializer classes (from JsonSerializer/JsonDeserializer to JacksonJsonDeserializer/JacksonJsonSerializer)